docs: update localization files
- Update English help documentation
- Update Chinese help documentation
- Improve command descriptions and error messages

--- a/locales/help_docs/en.yml
+++ b/locales/help_docs/en.yml
@@ -114,3 +114,6 @@ jvv:
 
         footer: |
           Total %{num} member(s)
+
+    service:
+      listen: Listening for client connections in vault `%{path}` ...
