--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -32,20 +32,20 @@ jvv:
 
   create: |
     **在给定的目录名称中创建库**
-    **使用方法**：jvv create **<库名称>**
+    **用法**：jvv create **<库名称>**
 
     **例如**：jvv create MyVault
     上述操作会在当前目录创建目录 MyVault，然后在该目录内初始化库
 
   init: |
     **在当前目录创建库**
-    **使用方法**：jvv init
+    **用法**：jvv init
 
     该命令会在当前所在的目录创建库，库名称由当前所在目录名称决定
 
   member: |
     **成员管理**
-    **使用方法**：jvv member <register/remove> <成员名称>
+    **用法**：jvv member <register/remove> <成员名称>
 
     根据给定的 成员名称，注册（若不存在）或移除（若存在）指定成员
 
@@ -59,7 +59,7 @@ jvv:
 
   service: |
     **服务设置相关**
-    **使用方法**：
+    **用法**：
     jvv service listen - 在当前库中启动服务器，以接受客户端连接
       你可以使用 --no-log 来禁用日志输出
 
@@ -110,3 +110,6 @@ jvv:
 
         footer: |
           共 %{num} 个成员
+
+    service:
+      listen: 正在库 `%{path}` 监听来自客户端的连接 ...
