--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -18,11 +18,11 @@ jvv:
     **服务**：
       jvv service listen - 在当前库中运行服务端
 
-    另外，你可以使用 jvv <命令名称> --help 来查询更详细的帮助！
+    另外，您可以使用 jvv <命令名称> --help 来查询更详细的帮助！
 
   here: |
     **显示此处库的信息**
-    **例如**：cd ./你需要查询的库/ && jvv here
+    **例如**：cd ./您需要查询的库/ && jvv here
 
   create: |
     **在给定的目录名称中创建库**
@@ -55,7 +55,7 @@ jvv:
     **服务设置相关**
     **用法**：
     jvv service listen - 在当前库中启动服务器，以接受客户端连接
-      你可以使用 --no-log 来禁用日志输出
+      您可以使用 --no-log 来禁用日志输出
 
   fail:
     jvcs: JustEnoughVCS 错误：%{err}
@@ -97,7 +97,7 @@ jvv:
     here:
       info: |
         找到库 *`%{name}`*！（%{num_mem} 成员，%{num_pk} 位已注册公钥）
-        其中，管理着 %{num_sheets} 张表，%{num_vf} 个虚拟文件，总共 %{total_size_gb} GB
+        其中，管理着 %{num_sheets} 张表，%{num_vf} 个虚拟文件，总共 %{total_size}
 
         **提示**：若要启动服务端，请运行 jvv service listen
 
@@ -119,3 +119,222 @@ jvv:
 
     service:
       listen: 正在库 `%{path}` 监听来自客户端的连接 ...
+
+jv:
+  help: |
+    **JustEnoughVCS 本地工作区命令**
+    该程序将连接至上游库，用以同步、提交本地工作区文件的变化，以供协同创作。
+
+    **常用别名**：
+      jv u 下载最新信息，jv t 追踪文件，jv mv -a 自动移动文件，jv in/out 导入或导出文件
+
+    **创建工作区**：
+      jv create <名称> - 在给定名称的目录创建工作区
+      jv init - 在当前目录创建工作区
+
+    **指向上游库**：
+      jv direct <上游地址> - 将您的工作区指向该库
+      指定上游库后，您的工作区将被 *染色*，此后，您将无法连接至不同标识的库
+
+      jv unstain - 将您的工作区祛色（移除染色标识），此后该工作区将与上游库无关
+
+    **账户管理**：
+      jv account list - 列出该计算机所有的账户，以及是否注册私钥
+      jv account as <账户名称> - 切换当前账户
+      jv account add <账户名称> - 为当前计算机添加账户
+      jv account remove <账户名称> - 删除该账户
+      jv account mvkey <账户名称> <私钥文件> - 移动私钥到指定账户
+
+    **信息同步**：
+      jv update - 从上游工作区下载最新的信息
+
+    **表操作**：
+      jv sheet list - 列出上游工作区的所有表
+      jv sheet use <表名称> - 使用指定的表开始当前工作（不存在则自动创建）
+      jv sheet exit - 退出当前工作
+
+      jv import <文件包名称> - 从导入区导入文件
+      jv import <参照表中目录> - 从参照表导入文件
+      jv export <文件> <表名称> -m <描述> -n <文件包名称> - 导出指定的文件包到其他表的导入区
+
+    **文件操作**
+      jv move <文件> <到> - 安全地重命名文件
+      jv move auto - 自动处理本地文件的移动或重命名
+      jv track <文件> - 追踪、上传文件到上游库
+
+    **查询内建文档**
+      jv docs list - 列出所有可用的文档
+      jv docs <文档名称> - 查看指定文档的内容
+      或 jv docs <文档名称> -e - 返回特定文档的临时路径以供编辑器打开
+      **例如**：jv docs get-started -e | nano
+
+    您可以使用 jv <命令名称> --help 来查询更详细的帮助！
+
+    **提示**：若您需要了解 JustEnoughVCS 的协作范式，请使用 jv docs get-started
+
+  account: |
+    **管理本地账户**
+    **用法**：
+    jv account list - 列出该计算机所有的账户，以及是否注册私钥
+    jv account as <账户名称> - 切换当前账户
+    jv account add <账户名称> - 为当前计算机添加账户
+    jv account remove <账户名称> - 删除该账户
+    jv account mvkey <账户名称> <私钥文件> - 移动私钥到指定账户
+
+    账户是本地计算机上的身份标识，每个账户可以关联不同的私钥。
+    您需要先设置账户才能与上游库进行交互。
+
+
+  sheet: |
+    **管理文件表**
+    **用法**：
+    jv sheet list - 列出上游工作区的所有表
+    jv sheet use <表名称> - 使用指定的表开始当前工作（不存在则自动创建）
+    jv sheet exit - 退出当前工作
+
+    表是 JustEnoughVCS 中的核心概念，每个表代表一个独立的文件集合。
+    您可以在不同的表之间切换工作，或者将文件从一个表导出到另一个表。
+
+
+  create: |
+    **创建指定名称的工作区**
+    **用法**：jv create <工作区名称>
+
+    **例如**：jv create my_workspace
+    上述操作会在当前目录创建名为 my_workspace 的目录，并在其中初始化工作区。
+
+    工作区是您本地的工作环境，用于与上游库进行文件同步和版本控制。
+
+
+  init: |
+    **在此目录创建工作区**
+    **用法**：jv init
+
+    该命令会在当前所在的目录创建工作区，工作区名称由当前所在目录名称决定。
+
+    如果当前目录不为空，该操作将会失败。请确保在空目录中执行此命令。
+
+
+  here: |
+    **查询此处目录信息**
+    **用法**：jv here
+
+    显示当前目录文件的详细信息，包括：
+    - 文件名称、大小、版本号
+    - 文件当前的持有人
+    - 文件最新版本的提交信息
+
+    这是了解当前工作区目录状态的快速方式。
+
+
+  track: |
+    **追踪本地的文件**
+    **用法**：jv track <文件路径>
+
+    **例如**：jv track src/main.rs
+    第一次追踪文件时，会创建并上传 “第一版本”，然后自动持有该文件的编辑权。
+    后续追踪同一文件时，会更新文件的新版本。
+
+    追踪文件是版本控制的基础操作，确保您的更改能够同步到上游库。
+
+
+  hold: |
+    **拿取文件：从上游库获得该文件的编辑权**
+    **用法**：jv hold <文件路径>
+
+    **例如**：jv hold src/lib.rs
+    当您需要编辑某个文件时，必须先持有该文件的编辑权。
+    持有文件后，其他协作者将无法同时编辑该文件，避免冲突。
+
+    编辑完成后，请记得追踪文件以保存更改。
+
+
+  throw: |
+    **丢弃文件：从上游库放弃该文件的编辑权**
+    **用法**：jv throw <文件路径>
+
+    **例如**：jv throw src/config.rs
+    当您不再需要编辑某个文件时，可以丢弃该文件的编辑权。
+    丢弃后，其他协作者就可以持有并编辑该文件。
+
+    如果您对文件进行了更改但尚未追踪，丢弃操作会丢失这些更改。
+
+
+  move: |
+    **移动本地文件**
+    **用法**：
+    jv move <源文件> <目标位置> - 安全地重命名或移动文件
+    jv move auto - 自动处理本地文件的移动或重命名
+
+    **例如**：
+    jv move old_name.txt new_name.txt
+    jv move src/old_dir/file.rs src/new_dir/file.rs
+    jv move auto
+
+    安全移动操作会保持文件的版本历史，而自动移动会检测并处理所有重命名。
+
+
+  export: |
+    **将文件导出至其他表的待导入区**
+    **用法**：jv export <文件> <目标表> -m <描述> -n <文件包名称>
+
+    **例如**：jv export data.csv analytics -m "导出分析数据" -n "analysis_data"
+    该操作会将指定的文件打包并发送到目标表的导入区。
+
+    其他协作者可以在目标表中使用 jv import 命令来导入这些文件。
+
+
+  import: |
+    **导入文件到当前表**
+    **用法**：
+    jv import <文件包名称> - 从导入区导入文件
+    jv import <参照表中目录> - 从参照表导入文件
+
+    **例如**：
+    jv import Player_Import - 来自导入区定义的名称
+    jv import ref@Data/Player.csv - 来自参照表的路径
+
+    导入操作会将文件从其他表或导入区复制到当前工作区。
+
+
+  direct: |
+    **定向到指定上游库，并染色该工作区**
+    **用法**：jv direct <上游库地址>
+
+    **例如**：jv direct your_vault.org
+    该操作会将当前工作区连接到指定的上游库，并为工作区添加染色标识。
+
+    染色后，该工作区将只能与指定标识的库进行交互，确保数据一致性。
+
+
+  unstain: |
+    **为工作区祛色**
+    **用法**：jv unstain
+
+    **危险操作**：该操作会移除工作区的染色标识，此后该工作区将与上游库断开连接。
+
+    祛色后，工作区将不再与任何特定库关联，可以重新连接到其他库。
+    但请注意，这可能会导致数据同步问题，请谨慎使用。
+
+
+  update: |
+    **从上游库下载最新的信息**
+    **用法**：jv update
+
+    该操作会从上游库同步最新的文件状态、表信息和成员信息。
+
+    建议在开始工作前先执行更新操作，确保您拥有最新的工作环境。
+
+
+  docs: |
+    **查询内建文档**
+    **用法**：
+    jv docs list - 列出所有可用的文档
+    jv docs <文档名称> - 查看指定文档的内容
+    jv docs <文档名称> -e - 返回特定文档的临时路径以供编辑器打开
+
+    **例如**：
+    jv docs get-started
+    jv docs collaboration -e | nano
+
+    内建文档包含 JustEnoughVCS 的使用指南、协作范式和最佳实践。
